set friquency